Add basics and plumbing
Nothing new ...